@@ -1,6 +1,7 @@
 package be.seeseemelk.mockbukkit.scoreboard;
 
-import be.seeseemelk.mockbukkit.UnimplementedOperationException;
+import be.seeseemelk.mockbukkit.entity.EntityMock;
+import com.google.common.base.Preconditions;
 import net.kyori.adventure.text.Component;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Entity;
@@ -14,7 +15,6 @@ import org.bukkit.scoreboard.Team;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -22,8 +22,13 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import static net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer.legacySection;
+
 public class ScoreboardMock implements Scoreboard
 {
+
+	private static final String OFFLINE_PLAYER_CANNOT_BE_NULL = "OfflinePlayer cannot be null";
+	private static final String ENTITY_CANNOT_BE_NULL = "Entity cannot be null";
 
 	private final @NotNull Map<String, ObjectiveMock> objectives = new HashMap<>();
 	private final @NotNull Map<DisplaySlot, ObjectiveMock> objectivesByDisplaySlot = new EnumMap<>(DisplaySlot.class);
@@ -37,31 +42,35 @@ public class ScoreboardMock implements Scoreboard
 	}
 
 	@Override
-	public @NotNull Objective registerNewObjective(@NotNull String name, @NotNull String criteria, @Nullable Component displayName) throws IllegalArgumentException
+	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull String criteria, @Nullable Component displayName) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		return registerNewObjective(name, criteria, displayName, RenderType.INTEGER);
 	}
 
 	@Override
-	public @NotNull Objective registerNewObjective(@NotNull String name, @NotNull String criteria, @Nullable Component displayName, @NotNull RenderType renderType) throws IllegalArgumentException
+	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull String criteria, @Nullable Component displayName, @NotNull RenderType renderType) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		return registerNewObjective(name, Criteria.create(criteria), displayName, renderType);
 	}
 
 	@Override
-	public @NotNull Objective registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @Nullable Component displayName) throws IllegalArgumentException
+	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @Nullable Component displayName) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		return registerNewObjective(name, criteria, displayName, RenderType.INTEGER);
 	}
 
 	@Override
-	public @NotNull Objective registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @Nullable Component displayName, @NotNull RenderType renderType) throws IllegalArgumentException
+	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @Nullable Component displayName, @NotNull RenderType renderType) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Preconditions.checkNotNull(name, "Objective name cannot be null");
+		Preconditions.checkNotNull(criteria, "Criteria cannot be null");
+		Preconditions.checkNotNull(displayName, "Display name cannot be null");
+		Preconditions.checkNotNull(renderType, "RenderType cannot be null");
+		Preconditions.checkArgument(name.length() <= Short.MAX_VALUE, "The name '" + name + "' is longer than the limit of 32767 characters");
+		Preconditions.checkArgument(!this.objectives.containsKey(name), "An objective of name '" + name + "' already exists");
+		ObjectiveMock objective = new ObjectiveMock(this, name, displayName, criteria, renderType);
+		this.objectives.put(name, objective);
+		return objective;
 	}
 
 	@Override
@@ -77,38 +86,32 @@ public class ScoreboardMock implements Scoreboard
 	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull String criteria, @NotNull String displayName, @NotNull RenderType renderType)
 			throws IllegalArgumentException
 	{
-		if (objectives.containsKey(name))
-		{
-			throw new IllegalArgumentException("An objective of name '" + name + "' already exists");
-		}
-		ObjectiveMock objective = new ObjectiveMock(this, name, displayName, criteria, renderType);
-		objectives.put(name, objective);
-		return objective;
+		return registerNewObjective(name, criteria, legacySection().deserialize(displayName), renderType);
 	}
 
 	@Override
-	public @NotNull Objective registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @NotNull String displayName) throws IllegalArgumentException
+	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @NotNull String displayName) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		return registerNewObjective(name, criteria, displayName, RenderType.INTEGER);
 	}
 
 	@Override
-	public @NotNull Objective registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @NotNull String displayName, @NotNull RenderType renderType) throws IllegalArgumentException
+	public @NotNull ObjectiveMock registerNewObjective(@NotNull String name, @NotNull Criteria criteria, @NotNull String displayName, @NotNull RenderType renderType) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		return registerNewObjective(name, criteria, legacySection().deserialize(displayName), renderType);
 	}
 
 	@Override
-	public ObjectiveMock getObjective(String name) throws IllegalArgumentException
+	public ObjectiveMock getObjective(@NotNull String name) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		return objectives.get(name);
 	}
 
 	@Override
-	public @NotNull Set<Objective> getObjectivesByCriteria(String criteria) throws IllegalArgumentException
+	public @NotNull Set<Objective> getObjectivesByCriteria(@NotNull String criteria) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(criteria, "Criteria cannot be null");
 		return objectives.values().stream().filter(objective -> objective.getCriteria().equals(criteria))
 				.collect(Collectors.toSet());
 	}
@@ -116,18 +119,20 @@ public class ScoreboardMock implements Scoreboard
 	@Override
 	public @NotNull Set<Objective> getObjectivesByCriteria(@NotNull Criteria criteria) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Preconditions.checkNotNull(criteria, "Criteria cannot be null");
+		return objectives.values().stream()
+				.filter(objective -> objective.getTrackedCriteria().equals(criteria))
+				.collect(Collectors.toSet());
 	}
 
 	@Override
 	public @NotNull Set<Objective> getObjectives()
 	{
-		return Collections.unmodifiableSet(new HashSet<>(objectives.values()));
+		return Set.copyOf(objectives.values());
 	}
 
 	@Override
-	public ObjectiveMock getObjective(DisplaySlot slot) throws IllegalArgumentException
+	public ObjectiveMock getObjective(@NotNull DisplaySlot slot) throws IllegalArgumentException
 	{
 		return objectivesByDisplaySlot.get(slot);
 	}
@@ -135,6 +140,7 @@ public class ScoreboardMock implements Scoreboard
 	@Override
 	public @NotNull Set<Score> getScores(@NotNull OfflinePlayer player) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(player, OFFLINE_PLAYER_CANNOT_BE_NULL);
 		return getScores(player.getName());
 	}
 
@@ -154,6 +160,7 @@ public class ScoreboardMock implements Scoreboard
 	@Override
 	public void resetScores(@NotNull OfflinePlayer player) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(player, OFFLINE_PLAYER_CANNOT_BE_NULL);
 		resetScores(player.getName());
 	}
 
@@ -170,6 +177,7 @@ public class ScoreboardMock implements Scoreboard
 	@Override
 	public Team getPlayerTeam(@NotNull OfflinePlayer player) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(player, OFFLINE_PLAYER_CANNOT_BE_NULL);
 		return getEntryTeam(player.getName());
 	}
 
@@ -188,15 +196,16 @@ public class ScoreboardMock implements Scoreboard
 	}
 
 	@Override
-	public Team getTeam(String teamName) throws IllegalArgumentException
+	public Team getTeam(@NotNull String teamName) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(teamName, "Team name cannot be null");
 		return teams.get(teamName);
 	}
 
 	@Override
 	public @NotNull Set<Team> getTeams()
 	{
-		return Collections.unmodifiableSet(new HashSet<>(teams.values()));
+		return Set.copyOf(teams.values());
 	}
 
 	@Override
@@ -239,30 +248,31 @@ public class ScoreboardMock implements Scoreboard
 	}
 
 	@Override
-	public void clearSlot(DisplaySlot slot) throws IllegalArgumentException
+	public void clearSlot(@NotNull DisplaySlot slot) throws IllegalArgumentException
 	{
+		Preconditions.checkNotNull(slot, "Slot cannot be null");
 		objectivesByDisplaySlot.remove(slot);
 	}
 
 	@Override
 	public @NotNull Set<Score> getScoresFor(@NotNull Entity entity) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Preconditions.checkNotNull(entity, ENTITY_CANNOT_BE_NULL);
+		return getScores(((EntityMock) entity).getScoreboardEntry());
 	}
 
 	@Override
 	public void resetScoresFor(@NotNull Entity entity) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Preconditions.checkNotNull(entity, ENTITY_CANNOT_BE_NULL);
+		resetScores(((EntityMock) entity).getScoreboardEntry());
 	}
 
 	@Override
 	public @Nullable Team getEntityTeam(@NotNull Entity entity) throws IllegalArgumentException
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Preconditions.checkNotNull(entity, ENTITY_CANNOT_BE_NULL);
+		return getEntryTeam(((EntityMock) entity).getScoreboardEntry());
 	}
 
 	/**
